# agentic-code-review

./: README.md  main.py  pyproject.toml
app/agents/code_review_agent/: graph.py
app/agents/code_review_agent/nodes/: __init__.py  aggregate_findings.py  architecture_validation.py  best_practices.py  build_project_context.py  generate_inline_comments.py  generate_pr_summary.py  ingest_pr.py  performance_analysis.py  routing.py  security_scan.py
app/api/: dependencies.py
app/api/routers/: review.py
app/config/: container.py  prompt_config.py  settings.py
app/core/: prompt_service.py
app/models/: schemas.py  types.py
app/prompts/code_review/: architecture_validation.yml  best_practices.yml  inline_comments.yml  performance_analysis.yml  pr_summary.yml  security_scan.yml
app/services/: code_review_service.py
app/utils/: github_directory_fetcher.py  github_fetcher.py
doc/: agent-v1-spec.md  agent-v2-spec.md  frontend-spec.md  project-spec.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/directory/: page.tsx
frontend/src/app/pr/: page.tsx
frontend/src/components/forms/: ReviewInputForm.tsx
frontend/src/components/layout/: DashboardLayout.tsx  ErrorBoundary.tsx
frontend/src/components/review/: AnalysisSummaryPanel.tsx  CardDisplay.tsx  CodeDiffViewer.tsx  DirectoryProgress.tsx  FileTreeExplorer.tsx  NodeExecutionPanel.tsx
frontend/src/store/: reviewStore.ts
frontend/src/types/: api.ts
